<resources>
    <string name="app_name">Fuel Guard</string>
    <string name="app_configure">Configure my device</string>
    <string name="google_maps_key">YOUR_GOOGLE_MAPS_API_KEY</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Strings related to ToolBar -->
    <string name="toolbar_refresh">Refresh</string>
    <!--    <string name="toolbar_settings">Settings</string>-->
    <string name="toolbar_add_device">Add device</string>
    <string name="toolbar_fix_device">Fix device</string>
    <string name="toolbar_preference">Preference</string>
    <string name="toolbar_about">About</string>


    <string name="guide_power_on">Setp 1: Power on your device.</string>
    <string name="guide_scan_qr">Step 2: Scan QR code.</string>
    <string name="guide_connect_wifi">Step 3: Connect to Access Point.</string>
    <string name="guide_config">Final Step: Personalize your device.</string>

    <string name="notice_power_on">Notice: Once the configuration is done, the device will connect to the server automatically, and it will then blink its blue LED three times and turn off finally.\nYou can also cancel this configuration at anytime by pressing the \'Back\' Button.\nYou can press the Reset button on the device to erase previous configurations if possible.</string>

    <string name="btn_qr_device_scan">Scan Device</string>
    <string name="btn_qr_device_scanned">Scanned</string>
    <string name="qr_device_scanning">Scanning device</string>
    <string name="qr_device_scan_failed">Please scan the right QR code!</string>
    <string name="qr_device_scan_successfully">Device info imported successfully!</string>
    <string name="qr_device_scan_cancelled">Scan cancelled, please scan again!</string>

    <string name="btn_configure">Configure</string>
    <string name="btn_configured">All Done</string>
    <string name="chk_modifyHomeWiFi">Enable configuring Home WiFi</string>
    <string name="configuring">Configuring…</string>
    <string name="notify_config_error">SSID, Password and Display Name cannot be empty.</string>
    <string name="notify_config_error_title">Display Name cannot be empty.</string>
    <string name="notify_config_done">You have successfully configured your device.</string>
    <string name="notify_config_failed">Configuration failed, please reset your device and do it again!</string>
    <string name="notice_config">Notice: If it does not response, please manually connect to %1$s and configure it again.\nYou can also configure your device multiple times until the device is connected to the server.</string>
    <string name="notice_config_ac">Notice: Press Back Button to go back to Main Screen.\nYou can also configure your device multiple times until you changed the Home WiFi.</string>

    <string name="btn_wifi_connect">Connect</string>
    <string name="btn_wifi_connected">Connected</string>
    <string name="wifi_connecting">Connecting…</string>
    <string name="wifi_authenticating">Authenticating…</string>
    <string name="wifi_connected">Connected!</string>
    <string name="wifi_connection_failed">Connection failed!</string>
    <string name="wifi_obtaining_ipaddr">Obtaining IP Address…</string>
    <string name="wifi_disconnected">Disconnected, reconnecting…</string>
    <string name="wifi_scanning">Scanning…</string>
    <string name="notify_device_not_found">Didn\'t find the Access Point, please enable Location and check your device\'s status..</string>
    <string name="notice_connect_wifi">Notice: Be patient, it may take minutes to process.</string>

    <string name="wifi_ssid">SSID:</string>
    <string name="wifi_username">Home WiFi Username (Optional)</string>
    <string name="wifi_psk">Home WiFi Password</string>

    <string name="device_title">Display Name</string>
    <string name="device_sync_interval">Sync Interval (Second)</string>
    <string name="title_activity_main2">MainActivity2</string>

    <string name="set_device_failed">Lost connection to the device, please check your device and wifi state.</string>
    <string name="scan_network_no_wifi">Please connect to your home wifi and scan again!</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Fuel Controller Preferences -->
    <string name="pref_category_fuel">Fuel Settings</string>
    <string name="pref_unit_title">Measurement Unit</string>
    <string name="pref_unit_summary">Choose between Liters and Gallons</string>

    <string name="pref_category_alerts">Alerts &amp; Notifications</string>
    <string name="pref_low_fuel_alert_title">Low Fuel Alert</string>
    <string name="pref_low_fuel_threshold_title">Low Fuel Threshold (%)</string>
    <string name="pref_refill_alert_title">Refill Confirmation</string>

    <string name="pref_category_device">Hardware Sync</string>
    <string name="pref_mode_title">Operation Mode</string>
    <string name="pref_mode_summary">Toggle between Demo data and Real-time IOT data</string>
    <string name="pref_update_frequency_title">Update Frequency</string>
    <string name="pref_server_url_title">IOT Server URL</string>

    <string name="pref_category_appearance">Appearance</string>
    <string name="pref_dark_mode_title">Dark Mode</string>
    <string name="pref_neon_mode_title">Neon Mode</string>
    <string name="pref_neon_mode_summary">Toggle the glow effects on dashboard</string>

</resources>
