<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_category_appearance">

        <SwitchPreferenceCompat
            app:key="dark_mode"
            app:defaultValue="true"
            app:title="@string/pref_dark_mode_title" />

        <SwitchPreferenceCompat
            app:key="neon_mode"
            app:defaultValue="true"
            app:summary="@string/pref_neon_mode_summary"
            app:title="@string/pref_neon_mode_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_fuel">

        <ListPreference
            app:defaultValue="L"
            app:entries="@array/unit_entries"
            app:entryValues="@array/unit_values"
            app:key="measurement_unit"
            app:title="@string/pref_unit_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_alerts">

        <SwitchPreferenceCompat
            app:key="low_fuel_alert"
            app:defaultValue="true"
            app:title="@string/pref_low_fuel_alert_title" />

        <EditTextPreference
            app:dependency="low_fuel_alert"
            app:key="low_fuel_threshold"
            app:defaultValue="15"
            app:title="@string/pref_low_fuel_threshold_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="refill_alert"
            app:defaultValue="true"
            app:title="@string/pref_refill_alert_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_device">

        <SwitchPreferenceCompat
            app:key="real_mode"
            app:defaultValue="false"
            app:summary="@string/pref_mode_summary"
            app:title="@string/pref_mode_title" />

        <ListPreference
            app:defaultValue="30"
            app:entries="@array/frequency_entries"
            app:entryValues="@array/frequency_values"
            app:key="sync_frequency"
            app:title="@string/pref_update_frequency_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="server_url"
            app:defaultValue="http://192.168.4.1/data"
            app:title="@string/pref_server_url_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>