<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.xswxm.myapplication.MainActivity">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="1"
        android:title="@string/toolbar_refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_device"
        android:orderInCategory="2"
        android:title="@string/toolbar_add_device"
        app:showAsAction="never"  />
    <item
        android:id="@+id/action_fix_device"
        android:orderInCategory="3"
        android:title="@string/toolbar_fix_device"
        app:showAsAction="never" />

    <item
        android:id="@+id/export"
        android:title="Export "
        app:showAsAction="never"
        android:orderInCategory="4"/>
    <item
        android:id="@+id/simulateData"
        android:title="Simulate(Experimental) "
        app:showAsAction="never"
        android:orderInCategory="5"/>
</menu>
