<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/appBackgroundColor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
			android:gravity="center"
            android:layout_marginLeft="@dimen/textView_horizontal_margin"
            android:layout_marginRight="@dimen/textView_horizontal_margin"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_height"
                android:layout_gravity="center_vertical|center|center_horizontal"
                android:layout_marginBottom="@dimen/image_bottom_margin"
                android:layout_marginTop="@dimen/image_top_margin"
                android:scaleType="centerCrop"
                android:src="@drawable/pic_guidepage_configuration" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/textView_bottom_margin"
                android:gravity="center"
                android:text="@string/guide_config"
                android:textColor="?attr/appContentTextColor"
                android:textSize="@dimen/font_size_large" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txv_config_notify"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:textAlignment="center"
                android:textColor="?attr/appSubTextColor"
                android:textSize="@dimen/font_size_small" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/textView_horizontal_margin"
                android:layout_marginRight="@dimen/textView_horizontal_margin"
                android:orientation="horizontal" >

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0"
                    android:textColor="?attr/appContentTextColor"
                    android:text="@string/wifi_ssid" />

                <Spinner
                    android:id="@+id/spinner_ssid"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/img_ref_ssid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_menu_refresh"
                    app:tint="?attr/appIconTint" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColorHint="?attr/appSubTextColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_uname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/textView_horizontal_margin"
                    android:layout_marginRight="@dimen/textView_horizontal_margin"
                    android:hint="@string/wifi_username"
                    android:inputType="text"
                    android:textColor="?attr/appContentTextColor"
                    android:maxLength="32"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/textView_horizontal_margin"
                android:layout_marginRight="@dimen/textView_horizontal_margin" >

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="?attr/appSubTextColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_psk"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/wifi_psk"
                        android:inputType="textPassword"
                        android:textColor="?attr/appContentTextColor"
                        android:maxLength="32"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColorHint="?attr/appSubTextColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/textView_horizontal_margin"
                    android:layout_marginRight="@dimen/textView_horizontal_margin"
                    android:hint="@string/device_title"
                    android:textColor="?attr/appContentTextColor"
                    android:maxLength="32"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_config"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center_vertical|center|center_horizontal"
                android:layout_marginBottom="@dimen/button_bottom_margin"
                android:layout_marginTop="@dimen/button_top2_margin"
                android:text="@string/btn_configure"
                android:textSize="@dimen/font_size_medium" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>